feat: add pop-ups to zoos pages & refactor carousel in pets in zoo block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -104,8 +104,8 @@
           <div class="auto-carousel">
             <div class="slider-box__wrapper">
               <div class="slider-box" id="carousel">
-                <div class="cards" id="content">
-                  <div class="card-wrapper">
+                <ul class="cards active">
+                  <li class="card-wrapper" id="content">
                     <a class="card" href="../zoos/panda/panda.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/panda.jpg" alt="panda" />
@@ -114,8 +114,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/alligator/alligator.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
@@ -124,8 +124,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/gorilla/gorilla.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
@@ -134,8 +134,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/elephant.jpg" alt="elephant" />
@@ -144,8 +144,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
@@ -154,8 +154,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/eagle/eagle.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
@@ -164,8 +164,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
@@ -174,8 +174,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/penguin.jpg" alt="penguin" />
@@ -184,8 +184,10 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                </ul>
+                <ul class="cards">
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/panda/panda.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/panda.jpg" alt="panda" />
@@ -194,8 +196,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/alligator/alligator.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
@@ -204,8 +206,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/gorilla/gorilla.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
@@ -214,8 +216,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/elephant.jpg" alt="elephant" />
@@ -224,8 +226,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
@@ -234,8 +236,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="../zoos/eagle/eagle.html">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
@@ -244,8 +246,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
@@ -254,8 +256,8 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                  <div class="card-wrapper">
+                  </li>
+                  <li class="card-wrapper">
                     <a class="card" href="javascript:void(0)">
                       <figure>
                         <img class="card-image" src="../../assets/images/pets-slider/penguin.jpg" alt="penguin" />
@@ -264,12 +266,12 @@
                         </figcaption>
                       </figure>
                     </a>
-                  </div>
-                </div>
-                <button class="arrow arrow-left" id="arrow-prev">
+                  </li>
+                </ul>
+                <button class="arrow arrow-left control left" id="arrow-prev">
                   <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
                 </button>
-                <button class="arrow arrow-right" id="arrow-next">
+                <button class="arrow arrow-right control right" id="arrow-next">
                   <img src="../../assets/icons/buttons/arrow-right.svg" alt="" />
                 </button>
               </div>
@@ -435,7 +437,7 @@
               </a>
             </div>
             <div class="donate__button donate__button--right">
-              <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
+              <button class="button button--donate" id="button-donate-right">Donate for volunteers</button>
             </div>
             <div class="footer-copyright">
               <div class="copyright">Copyright ©RSSchool <span class="and">and</span> ©Yem Digital 2020 - 2021</div>
