feat: implement video-carousel to zoos pages

--- a/online-zoo/pages/zoos/eagle/eagle.html
+++ b/online-zoo/pages/zoos/eagle/eagle.html
@@ -134,56 +134,110 @@
           </div>
           <div class="video-container container">
             <div class="playlist">
-              <iframe
-                class="playlist__item main-item"
-                width="1160"
-                height="653"
-                src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-              <iframe
-                class="playlist__item item1"
-                width="275"
-                height="155"
-                src="https://www.youtube-nocookie.com/embed/UmclL6funN8"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-              <iframe
-                class="playlist__item item2"
-                width="275"
-                height="155"
-                src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-              <iframe
-                class="playlist__item item3"
-                width="275"
-                height="155"
-                src="https://www.youtube-nocookie.com/embed/iC1-E0WHbfI"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-              <iframe
-                class="playlist__item item4"
-                width="275"
-                height="155"
-                src="https://www.youtube-nocookie.com/embed/8HMOPKVPk5g"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+              <div class="main-frame">
+                <iframe
+                  class="main-video"
+                  width="1160"
+                  height="653"
+                  src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="auto-carousel">
+                <div id="wrapper">
+                  <div id="carousel">
+                    <ul id="content">
+                      <li class="small-frame frame1">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/UmclL6funN8"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                      <li class="small-frame frame2">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                      <li class="small-frame frame3">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/iC1-E0WHbfI"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                      <li class="small-frame frame4">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/8HMOPKVPk5g"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                      <li class="small-frame frame5">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/UmclL6funN8"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                      <li class="small-frame frame6">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                      <li class="small-frame frame7">
+                        <iframe
+                          class="small-video"
+                          width="275"
+                          height="155"
+                          src="https://www.youtube-nocookie.com/embed/iC1-E0WHbfI"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen
+                        ></iframe>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
               <div class="feed__button">
                 <a class="button button--feed" href="javascript:void(0)">Feed</a>
               </div>
