--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Online Zoo</title>
   </head>
 
@@ -505,9 +505,9 @@
       </form>
     </div>
     <div class="cover hidden" id="cover"></div>
-    <script src="./index.js"></script>
-    <script src="./pop-up.js"></script>
-    <script src="./carousel-how-it-works.js"></script>
-    <script src="./carousel-pets-in-zoo.js"></script>
+    <script src="index.js"></script>
+    <script src="pop-up.js"></script>
+    <script src="carousel-how-it-works.js"></script>
+    <script src="carousel-pets-in-zoo.js"></script>
   </body>
 </html>
