--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./map.css" />
+    <link rel="stylesheet" href="map.css" />
     <title>Online Zoo</title>
   </head>
 
@@ -225,6 +225,6 @@
         </div>
       </div>
     </footer>
-    <script src="./map.js"></script>
+    <script src="map.js"></script>
   </body>
 </html>
