--- a/online-zoo/pages/zoos/panda/panda.html
+++ b/online-zoo/pages/zoos/panda/panda.html
@@ -397,7 +397,7 @@
       </form>
     </div>
     <div class="cover hidden" id="cover"></div>
-    <script src="./panda.js"></script>
-    <script src="./pop-up.js"></script>
+    <script src="panda.js"></script>
+    <script src="pop-up.js"></script>
   </body>
 </html>
