--- a/online-zoo/pages/zoos/gorilla/gorilla.html
+++ b/online-zoo/pages/zoos/gorilla/gorilla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./gorilla.css" />
+    <link rel="stylesheet" href="gorilla.css" />
     <title>Online Zoo</title>
   </head>
 
@@ -396,7 +396,7 @@
       </form>
     </div>
     <div class="cover hidden" id="cover"></div>
-    <script src="./gorilla.js"></script>
-    <script src="./pop-up.js"></script>
+    <script src="gorilla.js"></script>
+    <script src="pop-up.js"></script>
   </body>
 </html>
